<?xml version="1.0"?>
<package>
    <name>EKF_SLAM</name>
    <version>1.0.0</version>
    <description>The EKF SLAM Implementation with Vrep Simulation</description>
    <maintainer email="yhuan150@jhu.edu">Yuxuan Huang</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    
    <export>
    </export>
</package>

