<package format="2">
    <name>ekf_slam</name>
    <version>1.0.0</version>
    <description>The EKF SLAM Implementation with Vrep Simulation</description>
    <maintainer email="yhuan150@jhu.edu">Yuxuan Huang</maintainer>
    <license>BSD</license>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>geometry_msgs</depend>
    
    <export>
    </export>
</package>

